src/System/Win32/Console/Console2.hsc

{-# LANGUAGE PatternSynonyms #-}
{-# LANGUAGE GeneralizedNewtypeDeriving #-}
module System.Win32.Console.Console2 where

import System.Win32.Console.Types

import Foreign.C
import Foreign.Ptr
import Foreign.C.String
import Foreign.Storable
import Foreign.Marshal.Alloc
import Foreign.Marshal.Array
import System.Win32
import Graphics.Win32.GDI.Types (COLORREF)
import Data.Maybe

import Data.Bits
import Foreign.Storable
import System.Win32
import qualified Data.Vector.Storable as V
import qualified Data.Vector.Storable.Mutable as MV

#include <cool_windows/consoleapi2.h>

#undef hsc_enum
#define hsc_enum(t, f, print_name, x)           \
    hsc_printf ("pattern ");                            \
    print_name;                                         \
    hsc_printf (":: %s\n", #t);                        \
    hsc_printf ("pattern ");                            \
    print_name;                                         \
    hsc_printf ("= %s ", #f);                          \
    if ((x) < 0)                                        \
        hsc_printf ("(%lld)\n", (long long)(x));        \
    else                                                \
        hsc_printf ("%llu\n", (unsigned long long)(x));

{- Generic access rights -}
newtype GenericAccessRights = GenericAccessRights { unGenericAccessRights :: DWORD }
                              deriving (Show, Eq, Ord, Bits, Storable)
#{enum GenericAccessRights, GenericAccessRights
  , GENERIC_READ = GENERIC_READ
  , GENERIC_WRITE = GENERIC_WRITE
  , GENERIC_EXECUTE = GENERIC_EXECUTE
  , GENERIC_ALL = GENERIC_ALL
  }
  
{- File Share Modes -}
newtype FileShareMode = FileShareMode { unFileShareMode :: DWORD }
                        deriving (Show, Eq, Ord, Bits, Storable)
#{enum FileShareMode, FileShareMode
  , FILE_SHARE_READ = FILE_SHARE_READ
  , FILE_SHARE_WRITE = FILE_SHARE_WRITE
  , FILE_SHARE_DELETE = FILE_SHARE_DELETE
  }

{-
WINBASEAPI
BOOL
WINAPI
FillConsoleOutputCharacterW(
    _In_ HANDLE hConsoleOutput,
    _In_ WCHAR cCharacter,
    _In_ DWORD nLength,
    _In_ COORD dwWriteCoord,
    _Out_ LPDWORD lpNumberOfCharsWritten
    );
 -}
foreign import ccall "windows.h FillConsoleOutputCharacterW" c_FillConsoleOutputCharacterW :: HANDLE -> WCHAR -> DWORD -> {- COORD -} DWORD -> LPDWORD -> IO BOOL

fillConsoleOutputCharacter :: HANDLE -> Char -> DWORD -> COORD -> IO DWORD
fillConsoleOutputCharacter h c l p =
  alloca $ \pCharsWritten -> do
  let c' = fromIntegral (fromEnum c)
  failIfFalse_ "FillCOnsoleOutputCharacterW" $ c_FillConsoleOutputCharacterW h c' l (coordToDWord p) pCharsWritten
  peek pCharsWritten


-- fillConsoleOutputCharacter :: HANDLE -> WCHAR -> DWORD -> COORD -> IO DWORD
-- fillConsoleOutputCharacter h c l p = do
--   let p' = coordToDWord

{-
WINBASEAPI
BOOL
WINAPI
FillConsoleOutputAttribute(
    _In_ HANDLE hConsoleOutput,
    _In_ WORD wAttribute,
    _In_ DWORD nLength,
    _In_ COORD dwWriteCoord,
    _Out_ LPDWORD lpNumberOfAttrsWritten
    );
 -}
foreign import ccall "windows.h FillConsoleOutputAttribute" c_FillConsoleOutputAttribute :: HANDLE -> AttributeFlags -> DWORD -> {- COORD -} DWORD -> LPDWORD -> IO BOOL

fillConsoleOutputAttribute :: HANDLE -> AttributeFlags -> DWORD -> COORD -> IO DWORD
fillConsoleOutputAttribute h a l p =
    alloca $ \pAttrsWritten -> do
    failIfFalse_ "FillCOnsoleOutputAttribute" $ c_FillConsoleOutputAttribute h a l (coordToDWord p) pAttrsWritten
    peek pAttrsWritten

{- 
WINBASEAPI
BOOL
WINAPI
GenerateConsoleCtrlEvent(
    _In_ DWORD dwCtrlEvent,
    _In_ DWORD dwProcessGroupId
    );
 -}
foreign import ccall "windows.h GenerateConsoleCtrlEvent" c_GenerateConsoleCtrlEvent :: CtrlEvent -> DWORD -> IO BOOL


{- WINBASEAPI
HANDLE
WINAPI
CreateConsoleScreenBuffer(
    _In_ DWORD dwDesiredAccess,
    _In_ DWORD dwShareMode,
    _In_opt_ CONST SECURITY_ATTRIBUTES* lpSecurityAttributes,
    _In_ DWORD dwFlags,
    _Reserved_ LPVOID lpScreenBufferData
    );
 -}
foreign import ccall "windows.h CreateConsoleScreenBuffer" c_CreateConsoleScreenBuffer :: GenericAccessRights -> FileShareMode -> LPVOID -> DWORD -> LPVOID -> IO HANDLE

createConsoleScreenBuffer :: GenericAccessRights -> FileShareMode -> IO HANDLE
createConsoleScreenBuffer gar fsm = c_CreateConsoleScreenBuffer gar fsm nullPtr CONSOLE_TEXTMODE_BUFFER nullPtr

{- 
WINBASEAPI
BOOL
WINAPI
SetConsoleActiveScreenBuffer(
    _In_ HANDLE hConsoleOutput
    );
 -}
foreign import ccall "windows.h SetConsoleActiveScreenBuffer" c_SetConsoleActiveScreenBuffer :: HANDLE -> IO BOOL

setConsoleActiveScreenBuffer :: HANDLE -> IO ()
setConsoleActiveScreenBuffer h = failIfFalse_ "SetConsoleActiveScreenBuffer" $ c_SetConsoleActiveScreenBuffer h

{- 
WINBASEAPI
BOOL
WINAPI
FlushConsoleInputBuffer(
    _In_ HANDLE hConsoleInput
    );
 -}
foreign import ccall "windows.h FlushConsoleInputBuffer" c_FlushConsoleInputBuffer :: HANDLE -> IO BOOL

flushConsoleInputBuffer :: HANDLE -> IO ()
flushConsoleInputBuffer h = failIfFalse_ "FlushConsoleInputBuffer" $ c_FlushConsoleInputBuffer h

{- 
WINBASEAPI
BOOL
WINAPI
SetConsoleCP(
    _In_ UINT wCodePageID
    );
 -}
foreign import ccall "windows.h SetConsoleCP" c_SetConsoleCP :: UINT -> IO BOOL

setConsoleCP :: UINT -> IO ()
setConsoleCP cp = failIfFalse_ "SetConsoleCP" $ c_SetConsoleCP cp

{- 
WINBASEAPI
BOOL
WINAPI
SetConsoleOutputCP(
    _In_ UINT wCodePageID
    );
 -}
foreign import ccall "windows.h SetConsoleOutputCP" c_SetConsoleOutputCP :: UINT -> IO BOOL

setConsoleOutputCP :: UINT -> IO ()
setConsoleOutputCP cp = failIfFalse_ "SetConsoleOutputCP" $ c_SetConsoleOutputCP cp

{- 
WINBASEAPI
BOOL
WINAPI
GetConsoleCursorInfo(
    _In_ HANDLE hConsoleOutput,
    _Out_ PCONSOLE_CURSOR_INFO lpConsoleCursorInfo
    );
 -}
data CONSOLE_CURSOR_INFO = CONSOLE_CURSOR_INFO { cciSize :: DWORD
                                               , cciVisible :: BOOL
                                               }
                         deriving (Show, Eq, Ord)
type PCONSOLE_CURSOR_INFO = Ptr CONSOLE_CURSOR_INFO

instance Storable CONSOLE_CURSOR_INFO where
  sizeOf _ = #{size CONSOLE_CURSOR_INFO}
  alignment _ = #{alignment CONSOLE_CURSOR_INFO}

  peek p = CONSOLE_CURSOR_INFO <$> #{peek CONSOLE_CURSOR_INFO, dwSize} p
                               <*> #{peek CONSOLE_CURSOR_INFO, bVisible} p

  poke p x = #{poke CONSOLE_CURSOR_INFO, dwSize} p (cciSize x)
          *> #{poke CONSOLE_CURSOR_INFO, bVisible} p (cciVisible x) 

foreign import ccall "windows.h GetConsoleCursorInfo" c_GetConsoleCursorInfo :: HANDLE -> PCONSOLE_CURSOR_INFO -> IO BOOL

getConsoleCursorInfo :: HANDLE -> IO CONSOLE_CURSOR_INFO
getConsoleCursorInfo h =
    alloca $ \pCursorInfo -> do
    failIfFalse_ "GetConsoleCursorInfo" $ c_GetConsoleCursorInfo h pCursorInfo
    peek pCursorInfo

{- 
WINBASEAPI
BOOL
WINAPI
SetConsoleCursorInfo(
    _In_ HANDLE hConsoleOutput,
    _In_ CONST CONSOLE_CURSOR_INFO* lpConsoleCursorInfo
    );
 -}
foreign import ccall "windows.h SetConsoleCursorInfo" c_SetConsoleCursorInfo :: HANDLE -> PCONSOLE_CURSOR_INFO -> IO BOOL
setConsoleCursorInfo :: HANDLE -> CONSOLE_CURSOR_INFO -> IO ()
setConsoleCursorInfo h cursorInfo =
    alloca $ \pCursorInfo -> do
    poke pCursorInfo cursorInfo
    failIfFalse_ "SetConsoleCursorInfo" $ c_SetConsoleCursorInfo h pCursorInfo

{- 
WINBASEAPI
BOOL
WINAPI
GetConsoleScreenBufferInfo(
    _In_ HANDLE hConsoleOutput,
    _Out_ PCONSOLE_SCREEN_BUFFER_INFO lpConsoleScreenBufferInfo
    );
 -}
data CONSOLE_SCREEN_BUFFER_INFO = CONSOLE_SCREEN_BUFFER_INFO { csbiSize :: COORD
                                                             , csbiCursorPosition :: COORD
                                                             , csbiAttributes :: WORD
                                                             , csbiWindow :: SMALL_RECT
                                                             , csbiMaximumWindowSize :: COORD
                                                             }
                                deriving (Show, Eq, Ord)
type PCONSOLE_SCREEN_BUFFER_INFO = Ptr CONSOLE_SCREEN_BUFFER_INFO

instance Storable CONSOLE_SCREEN_BUFFER_INFO where
  sizeOf _ = #{size CONSOLE_SCREEN_BUFFER_INFO}
  alignment _ = #{alignment CONSOLE_SCREEN_BUFFER_INFO}

  peek p = CONSOLE_SCREEN_BUFFER_INFO <$> #{peek CONSOLE_SCREEN_BUFFER_INFO, dwSize} p
                                      <*> #{peek CONSOLE_SCREEN_BUFFER_INFO, dwCursorPosition} p
                                      <*> #{peek CONSOLE_SCREEN_BUFFER_INFO, wAttributes} p
                                      <*> #{peek CONSOLE_SCREEN_BUFFER_INFO, srWindow} p
                                      <*> #{peek CONSOLE_SCREEN_BUFFER_INFO, dwMaximumWindowSize} p

  poke p x = #{poke CONSOLE_SCREEN_BUFFER_INFO, dwSize} p (csbiSize x)
          *> #{poke CONSOLE_SCREEN_BUFFER_INFO, dwCursorPosition} p (csbiCursorPosition x) 
          *> #{poke CONSOLE_SCREEN_BUFFER_INFO, wAttributes} p (csbiAttributes x) 
          *> #{poke CONSOLE_SCREEN_BUFFER_INFO, srWindow} p (csbiWindow x) 
          *> #{poke CONSOLE_SCREEN_BUFFER_INFO, dwMaximumWindowSize} p (csbiMaximumWindowSize x) 

foreign import ccall "windows.h GetConsoleScreenBufferInfo" c_GetConsoleScreenBufferInfo :: HANDLE -> PCONSOLE_SCREEN_BUFFER_INFO -> IO BOOL

getConsoleScreenBufferInfo :: HANDLE -> IO CONSOLE_SCREEN_BUFFER_INFO
getConsoleScreenBufferInfo h =
    alloca $ \pConsoleScreenBufferInfo -> do
    failIfFalse_ "GetConsoleScreenBufferInfo" $ c_GetConsoleScreenBufferInfo h pConsoleScreenBufferInfo
    peek pConsoleScreenBufferInfo

{- 
WINBASEAPI
BOOL
WINAPI
GetConsoleScreenBufferInfoEx(
    _In_ HANDLE hConsoleOutput,
    _Inout_ PCONSOLE_SCREEN_BUFFER_INFOEX lpConsoleScreenBufferInfoEx
    );
 -}
data CONSOLE_SCREEN_BUFFER_INFOEX = CONSOLE_SCREEN_BUFFER_INFOEX { csbiexSize :: COORD
                                                                 , csbiexCursorPosition :: COORD
                                                                 , csbiexAttributes :: WORD
                                                                 , csbiexWindow :: SMALL_RECT
                                                                 , csbiexMaximumWindowSize :: COORD
                                                                 , csbiexPopupAttributes :: WORD
                                                                 , csbiexFullscreenSupported :: BOOL
                                                                 , csbiexColorTable :: [COLORREF]
                                                                 }
                                  deriving (Show, Eq, Ord)
type PCONSOLE_SCREEN_BUFFER_INFOEX = Ptr CONSOLE_SCREEN_BUFFER_INFOEX

instance Storable CONSOLE_SCREEN_BUFFER_INFOEX where
  sizeOf _ = #{size CONSOLE_SCREEN_BUFFER_INFOEX}
  alignment _ = #{alignment CONSOLE_SCREEN_BUFFER_INFOEX}

  peek p = CONSOLE_SCREEN_BUFFER_INFOEX <$> #{peek CONSOLE_SCREEN_BUFFER_INFOEX, dwSize} p
                                        <*> #{peek CONSOLE_SCREEN_BUFFER_INFOEX, dwCursorPosition} p
                                        <*> #{peek CONSOLE_SCREEN_BUFFER_INFOEX, wAttributes} p
                                        <*> #{peek CONSOLE_SCREEN_BUFFER_INFOEX, srWindow} p
                                        <*> #{peek CONSOLE_SCREEN_BUFFER_INFOEX, dwMaximumWindowSize} p
                                        <*> #{peek CONSOLE_SCREEN_BUFFER_INFOEX, wPopupAttributes} p
                                        <*> #{peek CONSOLE_SCREEN_BUFFER_INFOEX, bFullscreenSupported} p
                                        <*> peekArray 16 (#{ptr CONSOLE_SCREEN_BUFFER_INFOEX, ColorTable} p)
